plugins {
	id 'fabric-loom' version '0.10-SNAPSHOT'
	id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.mod_version + "+" + project.minecraft_version
group = project.maven_group

repositories {
	mavenCentral()
	maven { url "https://maven.shedaniel.me/" }
	maven {
		name = "AperLambda"
		url = 'https://aperlambda.github.io/maven'
	}
	
	
	/*maven { url 'https://jitpack.io' }

	maven {
		name = "entity reach"
		url = "https://maven.jamieswhiteshirt.com/libs-release/"
	}
	maven {
		name = "fall flying lib"
		url = "https://dl.bintray.com/adriantodt/maven"
	}
	maven {
		name = "cloth config"
		url = "https://maven.shedaniel.me/"
	}*/

	maven {
		name = 'TerraformersMC'
		url = 'https://maven.terraformersmc.com/releases/'
	}

	maven {
		name = 'Modrinth'
		url = 'https://api.modrinth.com/maven'
	}

}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	// LuaJ
	implementation group: 'org.luaj', name: 'luaj-jse', version: '3.0.1'
	include group: 'org.luaj', name: 'luaj-jse', version: '3.0.1'

	// OBJ Loader
	/*implementation group: 'de.javagl', name: 'obj', version: '0.3.0'
	include group: 'de.javagl', name: 'obj', version: '0.3.0'

	//SpruceUI
	modImplementation "com.github.lambdaurora:spruceui:${project.spruceui_version}"
	include "com.github.lambdaurora:spruceui:${project.spruceui_version}"
	
	//LambDynamicLights
	modImplementation 'com.github.LambdAurora:LambDynamicLights:1.3.4-1.16'
	
	//Origins
	modImplementation "com.github.apace100:origins-fabric:${project.origins_version}"*/

	//ModMenu
	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"

	//Iris
	modCompileOnly "maven.modrinth:iris:${project.iris_version}"

	//WebSocket library
	modImplementation 'com.neovisionaries:nv-websocket-client:2.14'
	include 'com.neovisionaries:nv-websocket-client:2.14'

	//Google has better IO options than java, 4head
	// https://mvnrepository.com/artifact/com.google.guava/guava
	implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
	it.options.release = 17
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
